--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 MolesL_2024/export_Moles_L_out_files/export_part_* filter=lfs diff=lfs merge=lfs -text
+MolesL_2024/export_Moles_L_out_files/export_part_*
